<resources>
    <string name="app_name">One Account</string>
    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <string name="field">Field</string>
    <string name="str_private">private</string>
    <string name="go_to_contacts">Go to contacts</string>
    <string name="custom_fields">Custom fields</string>
    <string name="contacts">Contacts</string>
    <string name="profile_image">Profile image</string>
    <string name="text">Text</string>
    <string name="file">File</string>
    <string name="category">Category</string>
    <string name="choose_type">Choose type</string>
    <string name="field_name">Field name</string>
    <string name="field_value">Field value</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_file_explorer">You dont have any file manager</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="photo_deleted">The photo has been deleted</string>
    <string name="select">Select</string>
    <string name="history">History</string>
    <string name="requests">Requests</string>
    <string name="third_party">Third party</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="menu_item_icon">menu item icon</string>

    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string name="refresh">Обновить</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="photo_icon">photo_icon</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="error_loading_profile">Error loading profile</string>
    <string name="error_saving_profile">Error while saving info</string>
</resources>
