<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDialog"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_type"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/gallery_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_text_a_white"
                app:backgroundTint="@color/colorGreen"
                app:elevation="0dp"
                app:fabSize="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/text"
                android:textColor="@color/colorWhite54" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/camera_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:rotation="45"
                android:src="@drawable/ic_attach_file_white_24dp"
                app:backgroundTint="#00befe"
                app:elevation="0dp"
                app:fabSize="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/file"
                android:textColor="@color/colorWhite54" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_folder_open_white_24dp"
                app:backgroundTint="@color/colorOrange"
                app:elevation="0dp"
                app:fabSize="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/category"
                android:textColor="@color/colorWhite54" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>